# autonomous-vehicle-dev

./: .gitignore  1.txt  ACC_GAASD_方案.md  AGENTS.md  Dockerfile  README.md  dev.sh  docker-compose.yml  fix_accpro1.sh  protoc安装步骤.txt  start_all.sh  函数规范.xlsx  模块名称.xlsx
Controller/: CMakeLists.txt  temp.txt
Controller/config/: control.yaml
Controller/include/: calcAcceleration.h  calcPreviewDistByCurvature.hpp  controlCmd.h  controlData.hpp  controller.hpp  controllerBase.hpp  debugVisualizer.hpp  getNearestIndex.h  getPreviewIndex.h  mathC.h  mpcController.h  pidController.h  purePursuit.h  state.h  stateDataStructTrans.h  steerSafetyFilter.h  trajDataStructTrans.h  trajPoint.h  vehicleModel.h
Controller/pidTest/: CMakeLists.txt  pidTestMain.c  pidTestMain.cpp  plotSpeed.cpp  plotSpeed.h
Controller/proto/Imu/: imu.pb.cc  imu.pb.h  imu.proto
Controller/proto/common/: error_code.pb.cc  error_code.pb.h  error_code.proto  header.pb.cc  header.pb.h  header.proto
Controller/proto/control/: control.pb.h
Controller/src/: calcAcceleration.c  calcPreviewDistByCurvature.cpp  controller.cc  debugVisualizer.cpp  getNearestIndex.c  getPreviewIndex.c  main.cpp  mathC.c  mpcController.cpp  pidController.c  purePursuit.c  stateDataStructTrans.cpp  steerSafetyFilter.cpp  trajDataStructTrans.cpp  vehicleModel.c
Localization/CoordinateTrans/: CMakeLists.txt
Localization/CoordinateTrans/dependence/: ztgeographycoordinatetransform.cpp  ztgeographycoordinatetransform.h
Localization/CoordinateTrans/src/: CoordinateTransFunctional.cpp  coordinateTransFunctional.h
Localization/CoordinateTrans/test/: main.cpp
Localization/MapProgram/MapAnlDemo/: CMakeLists.txt
Localization/MapProgram/MapAnlDemo/dependence/: localization_MapAnalysis.cpp
Localization/MapProgram/MapAnlDemo/src/: mapAnalysisAdd.cpp  mapAnalysisAdd.h
Localization/MapProgram/MapAnlDemo/test/: main.cpp
Localization/MapProgram/MapConstDemo/: CMakeLists.txt
Localization/MapProgram/MapConstDemo/dependence/: localization_MapConstruction.cpp
Localization/MapProgram/MapConstDemo/src/: localizationDeclaration.cpp  localizationDeclaration.h
Localization/MapProgram/MapConstDemo/test/: main.cpp
Logic/DecisionTree/CART/: CMakeLists.txt
Logic/DecisionTree/CART/dependence/: LogicDecisionTreeCARTFunction.cpp  LogicDecisionTreeCARTHead.hpp
Logic/DecisionTree/CART/src/: cartFunctional.cpp  cartFunctional.h
Logic/DecisionTree/CART/test/: main.cpp
Logic/DecisionTree/ID3C4.5/: CMakeLists.txt
Logic/DecisionTree/ID3C4.5/dependence/: LogicDecisionTreeFunction.cpp  LogicDecisionTreeHead.hpp
Logic/DecisionTree/ID3C4.5/src/: ID3C45Functional.cpp  ID3C45Functional.h
Logic/DecisionTree/ID3C4.5/test/: main.cpp
Planning/LocalPathPlanning/FixedTrajectory/BSpline/: CMakeLists.txt
Planning/LocalPathPlanning/FixedTrajectory/Quinticpolynomials/: CMakeLists.txt
Planning/SpeedPlanning/SamplingMethod/STgraphOpt/: CMakeLists.txt
driver/GpsDriver/: CMakeLists.txt  gpsDriver.cpp
driver/coms111111111111/: CMakeLists.txt
driver/coms111111111111/include/: mobile_base.hpp  scout_base.hpp  scout_protocol.h  scout_types.hpp  scout_uart_parser.h  stopwatch.h
driver/coms111111111111/src/: coms copy.cpp  coms.cpp
driver/coms111111111111/src/asyncio/: async_serial.cpp
driver/lidarDriver/: CMakeLists.txt
driver/lidarDriver/src/proto/: CMakeLists.txt  cloud_data.pb.cc  cloud_data.pb.h  cloud_data.proto
perception/perception_cv/: CMakeLists.txt
perception/perception_cv/doc/: Doxyfile
perception/perception_cv/doc/html/: CameraInfoOpt_8h_source.html  InversePerspectiveMapping_8cpp.html  InversePerspectiveMapping_8cpp__incl.map  InversePerspectiveMapping_8cpp__incl.md5  InversePerspectiveMapping_8hpp_source.html  Thread_2defineColor_8h_source.html  Thread_2imu_8pb_8h_source.html  annotated.html  baseLidarObjectDetector_8h_source.html  classControl_1_1CallByMember-members.html  classControl_1_1CallByMember.html  classControl_1_1CallByMemberV2-members.html  classControl_1_1CallByMemberV2.html  classControl_1_1CallByMemberV2__coll__graph.map  classControl_1_1CallByMemberV2__coll__graph.md5  classControl_1_1CallByMember__coll__graph.map  classControl_1_1CallByMember__coll__graph.md5  classControl_1_1CallByPointer-members.html  (+1974 more)
perception/perception_cv/include/: InversePerspectiveMapping.hpp  img_process.hpp  lane_detection.hpp
perception/perception_cv/src/: InversePerspectiveMapping.cpp  img_process.cpp  lane_detection.cpp  test.cpp
perception/perception_lidar_coms_livox/: CMakeLists.txt  controlMainZMQ.cc  imu.pb.h  planning.cpp
perception/perception_lidar_coms_livox/config/: perception.yaml  trans.txt
perception/perception_lidar_coms_livox/data/: 0.pcd  1.pcd  10.pcd  11.pcd  12.pcd  13.pcd  14.pcd  15.pcd  16.pcd  17.pcd  18.pcd  19.pcd  2.pcd  20.pcd  21.pcd  22.pcd  23.pcd  24.pcd  3.pcd  4.pcd  5.pcd  6.pcd  7.pcd  8.pcd  9.pcd
perception/perception_lidar_coms_livox/include/: baseLidarObjectDetector.h  classicLidarDetector.h  functionLidarDetector.h  lidarTools.h  patchworkpp.h
perception/perception_lidar_coms_livox/proto/: order.txt
perception/perception_lidar_coms_livox/src/: baseLidarObjectDetector.cpp  classicLidarDetector.cpp  functionLidarDetector.cpp  lidarTools.cpp  patchworkpp.cpp  perceptionLidarObjectDetection.cpp  test.cpp
thicvPilot_simulator/Thread/: CMakeLists.txt  config.yaml  controllerPID.h  steeringController.h  ztgeographycoordinatetransform.cpp
v2xserver/: CMakeLists.txt  README.md  V2xMain.cpp
v2xserver/config/: setting.conf
v2xserver/include/: Config.h  V2x.h  a.out  ztgeographycoordinatetransform.h
v2xserver/include/ivics/: bsm.h  common.h  ivics.h  rsi.h  spat.h  ssm.h  vir.h
v2xserver/proto/: RoutingMsg.pb.cc  RoutingMsg.pb.h  RoutingMsg.proto  replymsg.pb.cc  replymsg.pb.h  replymsg.proto  roadmsg.pb.cc  roadmsg.pb.h  roadmsg.proto  rsmsg.pb.cc  rsmsg.pb.h  rsmsg.proto  traffic_light.pb.cc  traffic_light.pb.h  traffic_light.proto
v2xserver/src/: Config.cpp  V2x.cpp  coorconv.cpp  ztgeographycoordinatetransform.cpp
v2xserver/testData/: track.txt
(+9870 files in other folders)
